cmake: Drop X11 requirement on macOS
We don't actually benefit from it

--- a/plugins/GSdx/CMakeLists.txt
+++ b/plugins/GSdx/CMakeLists.txt
@@ -238,7 +238,7 @@ set(GSdxFinalLibs
 	LibLZMA::LibLZMA
 )
 
-if(UNIX)
+if(UNIX AND NOT APPLE)
 	set(GSdxFinalLibs ${GSdxFinalLibs}
 		X11::X11)
 endif()
