--- a/.github/workflows/macos-workflow.yml
+++ b/.github/workflows/macos-workflow.yml
@@ -4,8 +4,6 @@ name: MacOS Build
 # events but only for the master branch
 on:
   push:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -14,8 +12,6 @@ on:
       - bin/PCSX2_keys.ini.default
       - "pcsx2/PAD/Windows/**"
   pull_request:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -53,7 +49,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout Submodules
-        run: git submodule update --init --recursive -j $(sysctl -n hw.activecpu)
+        run: git submodule update --init --recursive -j$(getconf _NPROCESSORS_ONLN)
 
       - name: Install Packages
         env:
@@ -70,4 +66,42 @@ jobs:
 
       - name: Build PCSX2
         working-directory: build
-        run: make -j$(sysctl -n hw.activecpu) # macOS doesn't use make install
+        run: make -j$(getconf _NPROCESSORS_ONLN) # macOS doesn't use make install
+
+      - name: Prepare Artifact Metadata
+        id: artifact-metadata
+        run: |
+          ARCH=${{ matrix.os }}-${{ matrix.platform }}
+          ARTIFACT_NAME=""
+          if [ ${{ github.event_name }} == "pull_request" ]; then
+            PR_SHA=$(git rev-parse --short "${{ github.event.pull_request.head.sha }}")
+            ARTIFACT_NAME="PCSX2-${ARCH}"
+            if [ ! -z "${{ github.event.pull_request.number }}" ]; then
+              PR_NUM=${{ github.event.pull_request.number }}
+              ARTIFACT_NAME="${ARTIFACT_NAME}-pr[${PR_NUM}]"
+            fi
+            ARTIFACT_NAME="${ARTIFACT_NAME}-sha[${PR_SHA}]"
+            if [ ! -z "${{ github.event.pull_request.title }}" ]; then
+              PR_TITLE=$(echo "${{ github.event.pull_request.title }}" | tr -cd '[a-zA-Z0-9[:space:]]_-')
+              ARTIFACT_NAME="${ARTIFACT_NAME}-title["${PR_TITLE}""
+            fi
+          else
+            SHA=$(git rev-parse --short "$GITHUB_SHA")
+            ARTIFACT_NAME="PCSX2-${ARCH}-sha[${SHA}"
+          fi
+          TRIMMED_ARTIFACT_NAME=$(printf "%.199s]" "$ARTIFACT_NAME")
+          echo "name=$TRIMMED_ARTIFACT_NAME"
+          echo "##[set-output name=name;]${TRIMMED_ARTIFACT_NAME}"
+
+      - name: Prepare Artifact Folder
+        working-directory: ./build
+        run: |
+          mv pcsx2 ${{ steps.artifact-metadata.outputs.name }}
+          tar -zcvf pcsx2.tar.gz ${{ steps.artifact-metadata.outputs.name }}/PCSX2.app
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.artifact-metadata.outputs.name }}
+          path: build/pcsx2.tar.gz
+          retention-days: 30 # https://docs.github.com/en/free-pro-team@latest/actions/reference/usage-limits-billing-and-administration#artifact-and-log-retention-policy
