--- a/.github/workflows/windows-workflow.yml
+++ b/.github/workflows/windows-workflow.yml
@@ -51,9 +51,7 @@ jobs:
 
       - name: Checkout Submodules
         if: steps.cache-submodules.outputs.cache-hit != 'true'
-        run: |
-          echo $(getconf _NPROCESSORS_ONLN)
-          git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
+        run: git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
 
       - name: Verify VS Project Files
         run: .github\workflows\scripts\windows\validate-vs-filters.ps1
