Allow workflows for non-master branches (#7)
* Build improvements

linux-workflow.yml:
 Checkout Submodules:
  Shorten --jobs to -j, use $(nproc).
 Make restore-keys into one line.
 Remove unneeded ./.

macos-workflow.yml:
 Checkout Submodules:
  Shorten --jobs to -j, use $(sysctl -n hw.activecpu).
 Move HOMEBREW_NO_INSTALL_CLEANUP to env: and add HOMEBREW_NO_ANALYTICS.
 Remove unneeded ./.
 Use $(sysctl -n hw.activecpu) instead of 2.

pr-triage.yml:
 Remove unnecessary quotation marks.
 Make on: pull_request_target into one line.
 Properly capitalize GitHub.
 End of file newline.

compile.sh:
 Add warning when running outside of GitHub Actions CI.
 Use $(nproc --all).

validate-vs-filters.ps1:
 End of file newline.

windows-workflow.yml:
 Opt out of PowerShell telemetry.
 Checkout Submodules:
  Shorten --jobs to -j, use $env:NUMBER_OF_PROCESSORS.
 Remove unneeded shell from Verify VS Project Files.
 setup-msbuild:
  Use v1. (always the latest version)
  Remove useless vs-version parameter.
 Remove useless /v:n parameter from msbuild (normal is the default verbosity)
 Remove unneeded ./ and .\.
 Add -p to mkdir.

.gitmodules:
 Make submodules shallow.

build.sh:
 Consistent formatting for ifs.
 Use $(nproc).


Co-authored-by: Margen67 <Margen67@users.noreply.github.com>

--- a/.github/workflows/windows-workflow.yml
+++ b/.github/workflows/windows-workflow.yml
@@ -4,8 +4,6 @@ name: Windows Build
 # events but only for the master branch
 on:
   push:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -14,8 +12,6 @@ on:
       - bin/PCSX2_keys.ini.default
       - "pcsx2/PAD/Linux/**"
   pull_request:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -46,29 +42,28 @@ jobs:
     # Set some sort of timeout in the event of run-away builds.  We are limited on concurrent jobs so, get rid of them.
     timeout-minutes: 30
 
+    env:
+      POWERSHELL_TELEMETRY_OPTOUT: 1
+
     steps:
       # NOTE - useful for debugging
       # - name: Dump GitHub context
       #   env:
       #     GITHUB_CONTEXT: ${{ toJson(github) }}
-      #   run: |
-      #     echo "$GITHUB_CONTEXT"
+      #   run: echo "$GITHUB_CONTEXT"
 
       - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Checkout Submodules
         if: steps.cache-submodules.outputs.cache-hit != 'true'
-        run: git submodule update --init --recursive --jobs 2
+        run: git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
 
       - name: Verify VS Project Files
-        shell: powershell
-        run: .\.github\workflows\scripts\windows\validate-vs-filters.ps1
+        run: .github\workflows\scripts\windows\validate-vs-filters.ps1
 
       - name: Setup msbuild
-        uses: microsoft/setup-msbuild@v1.0.2
-        with:
-          vs-version: 16.7
+        uses: microsoft/setup-msbuild@v1
 
       - name: Build PCSX2
         env:
@@ -104,10 +99,10 @@ jobs:
 
       - name: Prepare Artifact Folder
         shell: bash
-        working-directory: ./bin
+        working-directory: bin
         run: |
           shopt -s extglob dotglob
-          mkdir "${{ steps.artifact-metadata.outputs.name }}"
+          mkdir -p "${{ steps.artifact-metadata.outputs.name }}"
           mv !("${{ steps.artifact-metadata.outputs.name }}") "${{ steps.artifact-metadata.outputs.name }}"
           shopt -u dotglob
 
