--- a/.github/workflows/macos-workflow.yml
+++ b/.github/workflows/macos-workflow.yml
@@ -26,7 +26,7 @@ jobs:
       # Prevent one build from failing everything (although maybe those should be included as experimental builds instead)
       fail-fast: false
       matrix:
-        os: [macos-10.15]
+        os: [macos-latest]
         platform: [x64]
         experimental: [false]
 
@@ -95,7 +95,7 @@ jobs:
       - name: Prepare Artifact Folder
         working-directory: build
         run: |
-          mv pcsx2 ${{ steps.artifact-metadata.outputs.name }}
+          mv pcsx2 "${{ steps.artifact-metadata.outputs.name }}"
           tar -zcvf pcsx2.tar.gz ${{ steps.artifact-metadata.outputs.name }}/PCSX2.app
 
       - name: Upload artifact
