--- a/.github/workflows/appimage-workflow.yml
+++ b/.github/workflows/appimage-workflow.yml
@@ -1,11 +1,8 @@
 name: AppImage Build
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. Triggers the workflow on push or pull request events
 on:
   push:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -14,8 +11,6 @@ on:
       - bin/PCSX2_keys.ini.default
       - "pcsx2/PAD/Windows/**"
   pull_request:
-    branches:
-      - master
     paths-ignore:
       - .gitignore
       - "**/*.md"
@@ -31,16 +26,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             platform: x86
             compiler: gcc
             detail: -appimage
             experimental: true
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             platform: x64
             compiler: gcc
             experimental: true
-            detail: -appimage 
+            detail: -appimage
 
     name: ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}
     runs-on: ${{ matrix.os }}
@@ -62,7 +57,7 @@ jobs:
 
       - name: Cache Submodules
         id: cache-submodules
-        uses: actions/cache@v2.1.4
+        uses: actions/cache@v2
         with:
           key: submodules-${{ hashFiles('./.gitmodules') }}
           path: |
@@ -71,10 +66,11 @@ jobs:
             ./3rdparty/xz
             ./3rdparty/yaml-cpp
             ./3rdparty/gtest
+            ./3rdparty/libchdr
 
       - name: Checkout Submodules
         if: steps.cache-submodules.outputs.cache-hit != 'true'
-        run: git submodule update --init --recursive --jobs 2
+        run: git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
 
       # -- SETUP CCACHE - https://cristianadam.eu/20200113/speeding-up-c-plus-plus-github-actions-using-ccache/
       - name: Prepare ccache timestamp
@@ -85,18 +81,17 @@ jobs:
           message("::set-output name=timestamp::${current_date}")
 
       - name: ccache cache files
-        uses: actions/cache@v2.1.4
+        uses: actions/cache@v2
         with:
           path: .ccache
           key: ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-          restore-keys: |
-            ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}-ccache-
+          restore-keys: ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}-ccache-
 
       - name: Prepare Artifact Metadata
         id: artifact-metadata
         shell: bash
         run: |
-          ARCH=$([ "${{ matrix.platform }}" == x86 ] && echo "32bit" || echo "64bit")
+          ARCH=${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}
           ARTIFACT_NAME=""
           if [ ${{ github.event_name }} == "pull_request" ]; then
             PR_SHA=$(git rev-parse --short "${{ github.event.pull_request.head.sha }}")
@@ -117,23 +112,24 @@ jobs:
           TRIMMED_ARTIFACT_NAME=$(printf "%.199s]" "$ARTIFACT_NAME")
           echo "name=$TRIMMED_ARTIFACT_NAME"
           echo "##[set-output name=name;]${TRIMMED_ARTIFACT_NAME}"
-          
+
       - name: Build AppImage
         env:
           PLATFORM: ${{ matrix.platform }}
           COMPILER: ${{ matrix.compiler }}
           name: ${{ steps.artifact-metadata.outputs.name }}
         run: |
-          if [ ${{ matrix.platform }} = x86 ]; then 
+          if [ ${{ matrix.platform }} = x86 ]; then
               docker pull quriouspixel/pcsx2:18.04-386
               docker run -u root --env-file .github/workflows/scripts/linux/docker.env -v $(pwd):/pcsx2 -v "$GITHUB_WORKSPACE/.ccache":/root/.ccache quriouspixel/pcsx2:18.04-386 /bin/bash /pcsx2/.github/workflows/scripts/linux/docker.sh
           else
               docker pull quriouspixel/pcsx2:18.04
               docker run -u root --env-file .github/workflows/scripts/linux/docker.env -v $(pwd):/pcsx2 -v "$GITHUB_WORKSPACE/.ccache":/root/.ccache quriouspixel/pcsx2:18.04 /bin/bash /pcsx2/.github/workflows/scripts/linux/docker.sh
-          fi   
-        
+          fi
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.artifact-metadata.outputs.name }}
           path: artifacts
+          retention-days: 30 #https://docs.github.com/en/free-pro-team@latest/actions/reference/usage-limits-billing-and-administration#artifact-and-log-retention-policy
