--- a/.github/workflows/macos-workflow.yml
+++ b/.github/workflows/macos-workflow.yml
@@ -1,7 +1,6 @@
 name: MacOS Build
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. Triggers the workflow on push or pull request events
 on:
   push:
     paths-ignore:
@@ -48,8 +47,36 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Cache Submodules
+        id: cache-submodules
+        uses: actions/cache@v2
+        with:
+          key: submodules-${{ hashFiles('./.gitmodules') }}
+          path: |
+            ./.git/modules/
+            ./3rdparty/fmt
+            ./3rdparty/xz
+            ./3rdparty/yaml-cpp
+            ./3rdparty/gtest
+            ./3rdparty/libchdr
+
       - name: Checkout Submodules
         run: git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
+
+      # -- SETUP CCACHE - https://cristianadam.eu/20200113/speeding-up-c-plus-plus-github-actions-using-ccache/
+      - name: Prepare ccache timestamp
+        id: ccache_cache_timestamp
+        shell: cmake -P {0}
+        run: |
+          string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
+          message("::set-output name=timestamp::${current_date}")
+
+      - name: ccache cache files
+        uses: actions/cache@v2
+        with:
+          path: .ccache
+          key: ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
+          restore-keys: ${{ matrix.os }}-${{ matrix.platform }}-${{ matrix.compiler }}${{ matrix.detail }}-ccache-
 
       - name: Install Packages
         env:
@@ -96,7 +123,7 @@ jobs:
         working-directory: build
         run: |
           mv pcsx2 "${{ steps.artifact-metadata.outputs.name }}"
-          tar -zcvf pcsx2.tar.gz ${{ steps.artifact-metadata.outputs.name }}/PCSX2.app
+          tar -zcvf pcsx2.tar.gz "${{ steps.artifact-metadata.outputs.name }}/PCSX2.app"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
