--- a/.github/workflows/linux-workflow.yml
+++ b/.github/workflows/linux-workflow.yml
@@ -81,6 +81,7 @@ jobs:
             ./3rdparty/libchdr
 
       - name: Checkout Submodules
+        if: steps.cache-submodules.outputs.cache-hit != 'true'
         run: git submodule update --init --recursive -j $(getconf _NPROCESSORS_ONLN)
 
       # -- SETUP CCACHE - https://cristianadam.eu/20200113/speeding-up-c-plus-plus-github-actions-using-ccache/
@@ -143,7 +144,7 @@ jobs:
       - name: Prepare Artifact Folder
         run: |
           mv bin "${{ steps.artifact-metadata.outputs.name }}"
-          tar -zcvf pcsx2.tar.gz "${{ steps.artifact-metadata.outputs.name }}"
+          tar -zcvf pcsx2.tar.gz ${{ steps.artifact-metadata.outputs.name }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
