--- a/.github/workflows/macos-workflow.yml
+++ b/.github/workflows/macos-workflow.yml
@@ -86,7 +86,7 @@ jobs:
           HOMEBREW_NO_ANALYTICS: 1
         run: |
           brew update
-          brew install sound-touch portaudio wxmac gtk+3 sdl2 libsamplerate
+          brew install sound-touch portaudio wxmac gtk+3 sdl2 libsamplerate pulseaudio
 
       - name: Generate CMake Files
         run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_BUILD_PO=FALSE -B build .
